W03-P4: implement prev button and show the sequence in console.log

--- a/demo/md/w03/w03_64.md
+++ b/demo/md/w03/w03_64.md
@@ -11,3 +11,7 @@
 ### W03-P3: implement next button and show the sequence in console.log
  
 ![w03-p3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p3.png)
+
+### W03-P4: implement prev button and show the sequence in console.log
+ 
+![w03-p4.png](https://erogcveccbzsyhbgputf.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p4.png)
