W03-P1: modify w2_xx.md to fetch images from supabase

--- a/demo/md/w02/w02_64.md
+++ b/demo/md/w02/w02_64.md
@@ -23,10 +23,10 @@
 ###  W02-P3: debug -- 已經走過的，不能走，但是 turn 加1，下一步還是同一個player
   
   
-![w02-p3.png]()
+![w02-p3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w02-p3.png)
   
 ###  W02-P4: debug -- 已經贏了，還可以繼續往下玩
   
   
-![w02-p4.png]()
+![w02-p4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w02-p4.png)
   
