W03-P5: implement (suprise me) button and show the sequence in console.log

--- a/demo/md/w03/w03_64.md
+++ b/demo/md/w03/w03_64.md
@@ -1,7 +1,10 @@
 ### W03-P1: modify w2_xx.md to fetch images from supabase
  
 ![w03-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p1.png)
- 
+
+```
+bbbde68 frankielan168   Thu Mar 2 20:52:21 2023 +0800   W03-P1: modify w2_xx.md to fetch images from supabase
+```
 
 ### W03-P2: show reviews[0] info when DOM is loaded
  
@@ -15,9 +18,13 @@
 ### W03-P4: implement prev button and show the sequence in console.log
  
 ![w03-p4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p4.png)
+
 ```
 889e979 frankielan168   Thu Mar 2 20:30:54 2023 +0800   W03-P4: implement prev button and show the sequence in console.log
 ```
+
+### W03-P5: implement "suprise me" button and show the sequence in console.log
+ 
 ![w03-p5.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p5.png)
 ```
 
