--- a/demo/md/w03/w03_64.md
+++ b/demo/md/w03/w03_64.md
@@ -23,9 +23,14 @@ bbbde68 frankielan168   Thu Mar 2 20:52:21 2023 +0800   W03-P1: modify w2_xx.md 
 889e979 frankielan168   Thu Mar 2 20:30:54 2023 +0800   W03-P4: implement prev button and show the sequence in console.log
 ```
 
-### W03-P5: implement "suprise me" button and show the sequence in console.log
+### W03-P5: implement suprise me button and show the sequence in console.log
  
 ![w03-p5.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p5.png)
+
 ```
 
 ```
+
+### W03-P6: add your info as reviews[0] and show it
+ 
+![w03-p6.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-xx/md_1N_img/w03-p5.png)
