--- a/demo/md/w03/w03_64.md
+++ b/demo/md/w03/w03_64.md
@@ -28,9 +28,13 @@ bbbde68 frankielan168   Thu Mar 2 20:52:21 2023 +0800   W03-P1: modify w2_xx.md 
 ![w03-p5.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w03-p5.png)
 
 ```
-
+0eb92c4 frankielan168   Thu Mar 2 20:56:20 2023 +0800   W03-P5: implement (suprise me) button and show the sequence in console.log
 ```
 
 ### W03-P6: add your info as reviews[0] and show it
  
 ![w03-p6.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-xx/md_1N_img/w03-p5.png)
+
+```
+86b17cf frankielan168   Thu Mar 2 21:18:54 2023 +0800   W03-P6: add your info as reviews[0] and show it
+```
