--- a/demo/md/w04/w04_64.md
+++ b/demo/md/w04/w04_64.md
@@ -1,3 +1,15 @@
+### git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2023-3-08"
+
 ### W04-P1: add 3 images of my meals to menu array
  
 ![w04-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p1.png)
+
+```
+b947cac lan1018 Thu Mar 9 19:51:14 2023 +0800   W04-P1: add 3 images of my meals to menu array
+```
+
+### W04-P2: show all data in array menu into html (section-center)
+ 
+![w04-p2-1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p2-1.png)
+ 
+![w04-p2-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p2-2.png)
