--- a/demo/md/w04/w04_64.md
+++ b/demo/md/w04/w04_64.md
@@ -13,3 +13,25 @@ b947cac lan1018 Thu Mar 9 19:51:14 2023 +0800   W04-P1: add 3 images of my meals
 ![w04-p2-1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p2-1.png)
  
 ![w04-p2-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p2-2.png)
+
+```
+### 39c0478 lan1018 Fri Mar 10 02:52:44 2023 +0800  W04-P2: show all data in array menu into html (section-center)
+```
+
+### W04-logs
+
+![w04-logs.png]()
+
+### W04-P3: show all filter buttons into html (section-center)
+including (all, breakfast, lunch, dinner, shakes) 
+ 
+![w04-p3-1.png]()
+ 
+![w04-p3-2.png]()
+
+
+### W04-P4: get buttons from menu array, add 'all' at the beginning (section-center)
+ 
+![w04-p4-1.png]()
+ 
+![w04-p4-2.png]()
