--- a/demo/md/w04/w04_64.md
+++ b/demo/md/w04/w04_64.md
@@ -33,9 +33,16 @@ including (all, breakfast, lunch, dinner, shakes)
  
 ![w04-p3-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p3-2.png)
 
+```
+bdc0a7a lan1018 Fri Mar 10 05:13:24 2023 +0800  W04-P3 and W04-P (沒打好W04-P4)
+```
 
 ### W04-P4: get buttons from menu array, add 'all' at the beginning (section-center)
  
 ![w04-p4-1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p4-1.png)
  
 ![w04-p4-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w04-p4-2.png)
+
+```
+bdc0a7a lan1018 Fri Mar 10 05:13:24 2023 +0800  W04-P3 and W04-P (沒打好W04-P4)
+```
