W05-P2: implement all filter buttons with all tests in console.log

--- a/demo/md/w05/w05_64.md
+++ b/demo/md/w05/w05_64.md
@@ -5,5 +5,13 @@
 ![w05-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p1.png)
  
 ```
+Thu Mar 16 18:52:18 2023 +0800  W05-P1: use JavaScript module to import and export
+```
+
+### W05-P2: implement all filter buttons with all tests in console.log
+ 
+![w05-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p2.png)
+
+```
 
 ```
