--- a/demo/md/w05/w05_64.md
+++ b/demo/md/w05/w05_64.md
@@ -1,4 +1,4 @@
-### git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2023-3-08"
+### git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2023-3-15"
 
 ### W05-P1: use JavaScript module to import and export
  
@@ -15,5 +15,25 @@ Thu Mar 16 18:52:18 2023 +0800  W05-P1: use JavaScript module to import and expo
 ```
 Thu Mar 16 20:11:33 2023 +0800  W05-P2: implement all filter buttons with all tests in console.log
 ```
+ 
+### W05-P3: show modal and overlay when pressing a button
+ 
+![w05-p3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p3.png)
 
-###
+
+```
+Thu Mar 16 20:49:56 2023 +0800  W05-P3: show modal and overlay when pressing a button
+```
+
+### W05-P4: call closeModal to close modal, overlay; press ESC key will call closeModal as well
+ 
+![w05-p4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p4.png)
+
+
+### W05-P5:  press 3 different buttons can show 3 different modals
+ 
+<!-- ![w05-p5.png] -->
+
+### W05-logs
+ 
+<!-- ![w05-logs.png] -->
