W05-P5:  press 3 different buttons can show 3 different modals

--- a/demo/md/w05/w05_64.md
+++ b/demo/md/w05/w05_64.md
@@ -32,7 +32,7 @@ Thu Mar 16 20:49:56 2023 +0800  W05-P3: show modal and overlay when pressing a b
 
 ### W05-P5:  press 3 different buttons can show 3 different modals
  
-<!-- ![w05-p5.png] -->
+![w05-p5.png]()
 
 ### W05-logs
  
