--- a/demo/md/w05/w05_64.md
+++ b/demo/md/w05/w05_64.md
@@ -32,8 +32,15 @@ Thu Mar 16 20:49:56 2023 +0800  W05-P3: show modal and overlay when pressing a b
 
 ### W05-P5:  press 3 different buttons can show 3 different modals
  
-![w05-p5.png]()
+![w05-p5.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p5.png)
+
+```
+c2f4dc1 lan1018 Sat Mar 18 11:33:56 2023 +0800  W05-P5:  press 3 different buttons can show 3 different modals
+```
 
 ### W05-logs
  
-<!-- ![w05-logs.png] -->
+![w05-logs.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p5.png)
+```
+
+```
