--- a/demo/md/w05/w05_64.md
+++ b/demo/md/w05/w05_64.md
@@ -42,5 +42,5 @@ c2f4dc1 lan1018 Sat Mar 18 11:33:56 2023 +0800  W05-P5:  press 3 different butto
  
 ![w05-logs.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w05-p5.png)
 ```
-
+26b2712 lan1018 Sat Mar 18 11:38:32 2023 +0800  W05-logs
 ```
