W06-P1: Run w3school scores.find();

--- a/demo/md/w06/w06_64.md
+++ b/demo/md/w06/w06_64.md
@@ -13,5 +13,5 @@
 ![w06-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w06-p2.png)
 
 ```
-
+Thu Mar 23 19:42:00 2023 +0800  W06-P2: temperature convert from C to F
 ```
