--- a/demo/md/w06/w06_64.md
+++ b/demo/md/w06/w06_64.md
@@ -2,10 +2,10 @@
 
 ### W06-P1: Run w3school scores.find();
  
-![w06-p1.png]()
+![w06-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w06-p1.png)
 
 ```
-
+Thu Mar 23 20:11:08 2023 +0800  W06-P1: Run w3school scores.find();
 ```
 
 ### W06-P2: temperature convert from C to F
@@ -15,3 +15,7 @@
 ```
 Thu Mar 23 19:42:00 2023 +0800  W06-P2: temperature convert from C to F
 ```
+
+### W06-P3: import students and sdata array and do sorting, find the highest and lowest score
+ 
+![w06-p3.png]()
