--- a/demo/md/w06/w06_64.md
+++ b/demo/md/w06/w06_64.md
@@ -30,3 +30,16 @@ Thu Mar 23 20:34:36 2023 +0800  W06-P3: import students and sdata array and do s
 ### W06-P4: compute the average of students and sdata array
  
 ![w06-p4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w06-p4.png)
+
+```
+Thu Mar 23 21:23:47 2023 +0800  W06-P4: compute the average of students and sdata array
+```
+
+
+### W06-P5: Temperature convert C2F(), F2C() using Web interface
+ 
+C2F
+![w06-p5-1.png]()
+ 
+F2C
+![w06-p5-2.png]()
