--- a/demo/md/w09/w09_64.md
+++ b/demo/md/w09/w09_64.md
@@ -7,5 +7,13 @@
 ![w09-p1-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w09-p1-2.png)
  
 ```
-4c3402d htchung Thu Apr 13 19:01:07 2023 +0800  W09-P1: Midprep P1 answer
+80da3555        frankielan168   Thu Apr 13 19:24:15 2023 +0800  W09-P1: Midprep P1 answer
+```
+
+### W09-P2: Midprep P2 answer
+ 
+![w09-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w09-p2.png)
+ 
+```
+
 ```
