--- a/demo/md/w09/w09_64.md
+++ b/demo/md/w09/w09_64.md
@@ -10,10 +10,21 @@
 80da3555        frankielan168   Thu Apr 13 19:24:15 2023 +0800  W09-P1: Midprep P1 answer
 ```
 
+### W09-P3: Midprep P1 answer (c)(d)
+ 
+![w09-p1-3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w09-p1-3.png)
+ 
+![w09-p1-4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w09-p1-4.png)
+ 
+```
+
+```
+
 ### W09-P2: Midprep P2 answer
  
 ![w09-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w09-p2.png)
  
 ```
-
+ec522370        frankielan168   Thu Apr 13 19:38:13 2023 +0800  W09-P2: Midprep P2 answer
 ```
+
