--- a/demo/md/w12/w12-64.md
+++ b/demo/md/w12/w12-64.md
@@ -1,8 +1,12 @@
 ### git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2023-5-03"
 
 ### W12-P1: call back hell DOM demo
-![w12-p1.png]
+![w12-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p1.png)
 
 ```
-
+frankielan168   Thu May 4 19:27:56 2023 +0800   W12-P1: call back hell DOM demo
 ```
+
+### W12-P2: use promise to solve the cb hell problem
+ 
+![w12-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p2.png)
