--- a/demo/md/w12/w12-64.md
+++ b/demo/md/w12/w12-64.md
@@ -7,6 +7,16 @@
 frankielan168   Thu May 4 19:27:56 2023 +0800   W12-P1: call back hell DOM demo
 ```
 
+
 ### W12-P2: use promise to solve the cb hell problem
  
 ![w12-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p2.png)
+
+```
+frankielan168   Thu May 4 20:31:22 2023 +0800   W12-P2: use promise to solve the cb hell problem
+```
+
+
+### W12-P3: use async/await to solve the cb hell problem
+ 
+![w12-p3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p3.png)
