--- a/demo/md/w12/w12-64.md
+++ b/demo/md/w12/w12-64.md
@@ -20,3 +20,17 @@ frankielan168   Thu May 4 20:31:22 2023 +0800   W12-P2: use promise to solve the
 ### W12-P3: use async/await to solve the cb hell problem
  
 ![w12-p3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p3.png)
+
+```
+frankielan168   Thu May 4 20:47:13 2023 +0800   W12-P3: use async/await to solve the cb hell problem
+```
+
+### W12-P4: xhr, get sample.txt
+ 
+#### success reading
+ 
+![w12-p4-1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p4-1.png)
+ 
+#### fail reading
+ 
+![w12-p4-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p4-2.png)
