W12-P5: xhr, get people.json, and show names in browser

--- a/demo/md/w12/w12-64.md
+++ b/demo/md/w12/w12-64.md
@@ -25,6 +25,7 @@ frankielan168   Thu May 4 20:31:22 2023 +0800   W12-P2: use promise to solve the
 frankielan168   Thu May 4 20:47:13 2023 +0800   W12-P3: use async/await to solve the cb hell problem
 ```
 
+
 ### W12-P4: xhr, get sample.txt
  
 #### success reading
@@ -34,3 +35,12 @@ frankielan168   Thu May 4 20:47:13 2023 +0800   W12-P3: use async/await to solve
 #### fail reading
  
 ![w12-p4-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p4-2.png)
+
+```
+ frankielan168   Fri May 5 14:04:55 2023 +0800   W12-P4: xhr, get sample.txt
+```
+
+
+### W12-P5: xhr, get people.json, and show names in browser
+ 
+![w12-p5.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p5.png)
