--- a/demo/md/w12/w12-64.md
+++ b/demo/md/w12/w12-64.md
@@ -44,3 +44,19 @@ frankielan168   Thu May 4 20:47:13 2023 +0800   W12-P3: use async/await to solve
 ### W12-P5: xhr, get people.json, and show names in browser
  
 ![w12-p5.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w12-p5.png)
+
+```
+frankielan168   Fri May 5 14:27:49 2023 +0800   W12-P5: xhr, get people.json, and show names in browser
+```
+
+
+### W12-logs
+
+```
+2819018c        frankielan168   Fri May 5 14:27:49 2023 +0800   W12-P5: xhr, get people.json, and show names in browser
+2819018c        frankielan168   Fri May 5 14:27:49 2023 +0800   W12-P5: xhr, get people.json, and show names in browser
+e31ce182        frankielan168   Fri May 5 14:04:55 2023 +0800   W12-P4: xhr, get sample.txt
+ba51c34c        frankielan168   Thu May 4 20:47:13 2023 +0800   W12-P3: use async/await to solve the cb hell problem
+1f15ecb2        frankielan168   Thu May 4 20:31:22 2023 +0800   W12-P2: use promise to solve the cb hell problem
+a543ba46        frankielan168   Thu May 4 19:27:56 2023 +0800   W12-P1: call back hell DOM demo
+```
