--- a/demo/md/w13/w13_64.md
+++ b/demo/md/w13/w13_64.md
@@ -17,9 +17,9 @@
 frankielan168   Thu May 11 20:24:02 2023 +0800  W13-P2: Show /api/data.json, img using remote_url
 ```
 
+
 ### W13-logs
 ```
 74df86df        frankielan168   Thu May 11 20:24:02 2023 +0800  W13-P2: Show /api/data.json, img using remote_url
-a4d48823        frankielan168   Thu May 11 19:12:01 2023 +0800  W13-P1:
- Use fetch API to get person.json data
+a4d48823        frankielan168   Thu May 11 19:12:01 2023 +0800  W13-P1: Use fetch API to get person.json data
 ```
