--- a/demo/md/w14/w14_64.md
+++ b/demo/md/w14/w14_64.md
@@ -2,19 +2,30 @@
 
 ### W14-P1: Get Cocktail data by first letter
  
-![w14-p1.png]()
+![w14-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w14-p1.png)
+
+```
+frankielan168   Thu May 18 19:20:01 2023 +0800  W14-P1: Get Cocktail data by first letter
+```
 
 
 ### W14-P2: Get data from MealDB, SportDB, AudioDB one by one as in P1
  
 #### MealDB
  
-![w14-p2-1.png]()
+![w14-p2-1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w14-p2-1.png)
  
 #### SportsDB
  
-![w14-p2-2.png]()
+![w14-p2-2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w14-p2-2.png)
  
 #### AudioDB
  
-![w14-p2-3.png]()
+![w14-p2-3.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w14-p2-3.png)
+
+
+### W14-P3: Get products from url (https://course-api.com/javascript-store-products)
+ 
+![w14-p3-1.png]()
+ 
+![w14-p3-2.png]()
