W15-P2: get menu items from local json (products.json)

--- a/demo/md/w15/w15_64.md
+++ b/demo/md/w15/w15_64.md
@@ -3,3 +3,12 @@
 ### W15-P1: prepare menu items for API project in Vercel
  
 ![w15-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p1.png)
+
+```
+ frankielan168   Thu May 25 19:01:29 2023 +0800  W15-P1: prepare menu items for API project in Vercel
+```
+
+
+### W15-P2: get menu items from local json (products.json)
+ 
+![w15-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p2.png)
