W15-P3: get company products by pressing company buttons

--- a/demo/md/w15/w15_64.md
+++ b/demo/md/w15/w15_64.md
@@ -12,3 +12,12 @@
 ### W15-P2: get menu items from local json (products.json)
  
 ![w15-p2.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p2.png)
+
+```
+frankielan168   Thu May 25 20:13:44 2023 +0800  W15-P2: get menu items from local json (products.json)
+```
+
+### W15-P3: get company products by pressing company buttons
+
+![w15-p3-1](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p3-1.png)
+![w15-p3-2](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p3-2.png)
