--- a/demo/md/w15/w15_64.md
+++ b/demo/md/w15/w15_64.md
@@ -21,3 +21,20 @@ frankielan168   Thu May 25 20:13:44 2023 +0800  W15-P2: get menu items from loca
 
 ![w15-p3-1](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p3-1.png)
 ![w15-p3-2](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p3-2.png)
+
+```
+frankielan168   Thu May 25 21:25:39 2023 +0800  W15-P3: get company products by pressing company buttons
+```
+
+
+### W15-P4: show w15 web page in Vercel
+ 
+![w15-p4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p4.png)
+
+```
+
+```
+
+
+### W15-logs
+
