--- a/demo/md/w15/w15_64.md
+++ b/demo/md/w15/w15_64.md
@@ -32,9 +32,17 @@ frankielan168   Thu May 25 21:25:39 2023 +0800  W15-P3: get company products by 
 ![w15-p4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w15-p4.png)
 
 ```
-
+frankielan168   Thu May 25 21:30:41 2023 +0800  W15-P4: show w15 web page in Vercel
 ```
 
 
 ### W15-logs
 
+```
+$ git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2023-5-24"
+60087014        frankielan168   Thu May 25 21:30:41 2023 +0800  W15-P4: show w15 web page in Vercel
+f8d92b7f        frankielan168   Thu May 25 21:25:39 2023 +0800  W15-P3: get company products by pressing company buttons
+2d83358d        frankielan168   Thu May 25 20:13:44 2023 +0800  W15-P2: get menu items from local json (products.json)
+b945ecfa        frankielan168   Thu May 25 19:01:29 2023 +0800  W15-P1: prepare menu items for API project in Vercel
+a6df45af        frankielan168   Thu May 25 18:43:02 2023 +0800  add W15 Project
+```
