W16-P2: Show single meal by its ID

--- a/demo/md/w16/w16_64.md
+++ b/demo/md/w16/w16_64.md
@@ -5,5 +5,9 @@
 ![w16-p1.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w16-p1.png)
 
 ```
-
+frankielan168   Thu Jun 1 23:35:26 2023 +0800   W16-P1: Show meals by search term
 ```
+
+### W16-P2: Show single meal by its ID
+ 
+![w16-p2.png]()
