--- a/demo/md/w17/w17_64.md
+++ b/demo/md/w17/w17_64.md
@@ -1,5 +1,3 @@
-### for 0608-quiz create
-
 # (11%) JavaScript 網頁設計 -- 1N 期末上機考 1 -- 開放網路
 
 ##### 2023-06-08, at E201
@@ -22,13 +20,13 @@ Your (Name, ID): (藍冠勛, 208410364)
 - P2-1 (10%): 10 分
 - P2-2 (10%): 10 分
 - P2-3 (10%): 10 分
-- P2-4 (5%): ? 分
-- P3-1 (10%): ? 分
+- P2-4 (5%): 5 分
+- P3-1 (10%): 10 分
 - P3-2 (10%): ? 分
 - P3-3 (5%): ? 分
 - P3-4 (5%): ? 分
 - P3-5 (5%): ? 分
-- 總分: ? 分
+- 總分: 75 分
 
 ---
 
@@ -101,10 +99,10 @@ Your (Name, ID): (藍冠勛, 208410364)
 #### remember to git log for P2
 
 ```
-63e1a3c htchung Thu Jun 8 13:03:28 2023 +0800   P2: API fetching by Supabase and local json
+d04e15e4        frankielan168   Thu Jun 8 20:58:22 2023 +0800   P2: API fetching by Supabase and local json
 ```
 
-![w17-p2-4.png]()
+![w17-p2-4.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w17-p2-4.png)
 
 ---
 
@@ -112,11 +110,11 @@ Your (Name, ID): (藍冠勛, 208410364)
 
 #### (10%) P3-1: Do P3_xx by modifing the meal finder code to show cocktail drinks by search term
 
-![w17-p3-11.png]()
+![w17-p3-11.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w17-p3-11.png)
 
 #### in app_xx.js, mark the code you modified
 
-![w17-p3-12.png]()
+![w17-p3-12.png](https://casmvaldsmrrajnyisdj.supabase.co/storage/v1/object/public/demo-64/md_1N_img/w17-p3-12.png)
 
 #### (10%) P3-2: Do P4_xx using the code provided to show the config info on the left butons and add 5 users initially
 
